# nomad-parser-yambospectra

./: .cruft.json  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml  pyproject.toml.rej  test.ipynb
.github/workflows/: actions.yml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_parser_yambospectra/parsers/: __init__.py  parser.py  parser.py.rej
src/nomad_parser_yambospectra/schema_packages/: __init__.py  properties.py  schema_package.py
tests/data/: test.archive.yaml
tests/data/WorkflowTest/: pw_agm001074044_nscf_k1500_E65.in  pw_agm001074044_nscf_k1500_E65.out
tests/data/WorkflowTest/yambocalc/: epsilon_2_1500_4000
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
